# renikud-v2

./: .gitignore  README.md  TRAINING_GUIDE.md  pyproject.toml
.cursor/plans/: hebrew-nikud-bert-model-578325fc.plan.md
.cursor/rules/: keep-it-short.mdc  normalize-nfd.mdc  prefer-imports-on-top.mdc  use-uv.mdc
data/: eval_hand.txt  train.txt  train_example.txt
renikud-onnx/: export.py
renikud-onnx/examples/: usage.py
renikud-onnx/src/renikud_onnx/: __init__.py  constants.py  predict.py
src/: config.py  constants.py  dataset.py  decode.py  evaluate.py  inference.py  main.py  model.py  prepare_data.py  train.py  train_loop.py  trainer.py
web/: script.js  styles.css
